# multimodal_rag_article

./: .gitignore  README.md  run_all.py  visualize_layout.py  workflow.md
article_prototype/: EVALUATION_REPORT.md  README.md  TEST_RESULTS.md  chunker.py  config.yaml  create_test_pdf.py  evaluate_rerank_impact.py  evaluate_retrieval.py  evaluation_detailed_results.json  phase1_parse.py  phase2_enrich.py  phase3_ingest.py  phase4_retrieve.py  project_status.md  pyproject.toml  run_all.py  run_retrieval_evaluation.py  run_test_queries.py  schemas.py  test_run_results.json  workflow.md
article_prototype/output/: enriched_chunks.json  naive_chunks.json  structured_chunks.json
article_prototype/qdrant_db/: meta.json
article_prototype/qdrant_db/collection/article_chunks/: storage.sqlite
results/: TEST_RESULTS.md  enriched_chunks.json  raw_layout_elements.json  structured_chunks.json  test_run_results.json
src/: chunker.py  config.yaml  phase1_parse.py  phase2_enrich.py  phase3_ingest.py  phase4_retrieve.py  pyproject.toml  schemas.py
tests/: evaluate_rerank_impact.py  evaluate_retrieval.py  run_test_queries.py
