[project]
name = "article-prototype"
version = "0.1.0"
description = "Minimal multimodal RAG prototype for the article"
requires-python = ">=3.12"
dependencies = [
    "glmocr[layout]>=0.1.0",
    "pymupdf>=1.27.2",
    "pydantic>=2.12.0",
    "qdrant-client>=1.17.0",
    "openai>=2.24.0",
    "pytest>=8.0.0",
    "reportlab>=4.0.0",
    "sentence-transformers>=5.4.1",
]
